--- a/.github/workflows/update_fund.yml
+++ b/.github/workflows/update_fund.yml
@@ -29,6 +29,7 @@ jobs:
         run: |
           python deka_globalchampions_daily.py
           python deka_esg_daily.py
+          python deka_pfalzinvest_daily.py
 
       - name: Commit & push if changed
         run: |
